@@ -21,7 +21,7 @@
     top: 0;
     left: 0;
     background: #000;
-    z-index: 11;
+    z-index: 99911;
 }
 
 #lumebox-loading {
@@ -30,7 +30,7 @@
 	bottom: 1em;
 	background-color: #111;
 	padding: 0.5em;
-	z-index: 13;
+	z-index: 99913;
 	color: #aaa;
 	-webkit-box-shadow: 2px 2px 14px #000;
 	-moz-box-shadow: 1px 1px 12px #000;
@@ -45,7 +45,7 @@
 #lumebox-popup {
     display: none;
     position: absolute;
-    z-index: 12;
+    z-index: 99912;
 	margin: 20px;
 	-webkit-box-shadow: 2px 2px 14px #000;
 	-moz-box-shadow: 1px 1px 12px #000;
@@ -55,7 +55,7 @@
 #lumebox-popup.mobile {
     display: none;
     position: absolute;
-    z-index: 12;
+    z-index: 99912;
 	margin: 0;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
@@ -66,7 +66,7 @@
 	position: absolute;
 	width: 100%;
 	height: 30px;
-	z-index: 14;
+	z-index: 99914;
 	padding: 5px 0 0 5px;
 }
 
@@ -87,7 +87,7 @@
 	_position: absolute; /* hack for internet explorer 6*/
 	top: 0px;
 	left: 0px;
-	z-index: 14;
+	z-index: 99914;
 	padding: 5px 0 0 5px;
 }
 
@@ -105,7 +105,7 @@
 	height: 100%;
 	width: 50%;
 	min-height: 30px;
-	z-index: 13;
+	z-index: 99913;
 }
 
 #lumebox-next {
@@ -116,12 +116,12 @@
 	height: 100%;
 	width: 50%;
 	min-height: 30px;
-	z-index: 13;
+	z-index: 99913;
 }
 
 #lumebox-content {
     margin: 0 auto;
-    z-index: 12;
+    z-index: 99912;
 	color: #ccc;
 	position: relative;
 }
