@@ -1,128 +1,0 @@
-/* CSS Reset */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em,
-font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td {
-  border:0pt none;
-  font-family:inherit;
-  font-size:100%;
-  font-style:inherit;
-  font-weight:inherit;
-  margin:0pt;
-  padding:0pt;
-  vertical-align:baseline;
-}
-
-/* HTML5 tags */
-header, section, footer, aside, nav, article, figure, legend {
-    display: block;
-}
-
-/* =Main Styling
-	Color scheme based on triadic #2180C4 (blue) leeds to #FFC51D (yellow)
-	and #FF5A1D (orange) as secondary colors (http://colorschemedesigner.com/#3w31TsoGmw0w0).
-	*/
-body {
-	background-color: #fff;
-	color: #383838;
-	font-family: 'Lucida Grande', Geneva, Arial, Verdana, sans-serif;
-	font-size: 12px;
-	/* width: 640px; */
-	margin: 0 auto;
-	height: 100%;
-}
-
-a {
-	color: #2180C4;
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: #2180C4;
-}
-
-h2, h3, h4 {
-	color: #FF5A1D;
-	font-family: 'Droid Sans', arial, serif;
-	text-shadow: 0px 0px 1px rgba(0,0,0,0.4);
-}
-
-h1 {
-	font-size: 28pt;
-}
-
-h2 {
-	font-size: 18pt;
-}
-
-h3 {
-	font-size: 14pt;
-}
-
-pre {
-	font-family: 'Courier New', monospace;
-}
-
-img.alignright {float:right; margin:0 0 1em 1em}
-img.alignleft {float:left; margin:0 1em 1em 0}
-img.aligncenter {display: block; margin-left: auto; margin-right: auto}
-a img.alignright {float:right; margin:0 0 1em 1em}
-a img.alignleft {float:left; margin:0 1em 1em 0}
-a img.aligncenter {display: block; margin-left: auto; margin-right: auto}
-
-/* =Posts */
-body > article.hentry  {
-	width: 640px;
-	margin: 10px auto;
-}
-
-body > article.hentry  > header > h1.entry-title  {
-	text-align: center;
-	font: 28px 'Droid Sans', arial, serif;
-	margin-bottom: 20px;
-}
-
-body > article.hentry  > header > h1.entry-title a {
-	color: #383838;
-	text-decoration: none;
-	text-shadow: 0px 0px 1px rgba(0,0,0,0.4);
-}
-
-body > article.hentry  > header > h1.entry-title  a:visited {
-	color: #585858;
-}
-
-body > article.hentry  > header > h1.entry-title  a:hover {
-	color: #2180C4;
-}
-
-
-p {
-	display: block;
-	clear: left;
-	margin: 0 20px 20px 20px;
-}
-
-ul, ol {
-	display: block;
-	clear: left;
-	margin: 0 20px 20px 20px;
-	width: 600px;
-	list-style-type: disc;
-}
-
-body > article.hentry > footer {
-	display: block;
-	clear: left;
-	margin: 0 20px 20px 20px;
-	width: 600px;
-	font-size: 10px;
-	color: #585858;
-}
-
-body > article.hentry > footer address {
-	display: inline;
-}
