@@ -10,6 +10,7 @@ Change Log:
 - Fix bugs with iDEAL gateway
 - Add support for multiple iDEAL banks
 - Rename Store Themes to Store Styles to avoid terminology confusion
+- switch lightbox to GPL compatible lumebox
 
 2.5 - 2/16/2012 - Aaron Edwards
 ----------------------------------------------------------------------
